test/tests/stages/17_supporting_dynamic_memory_allocation/valid/libraries/sizeof_extern_client.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[23]:
  extern
  double
  identifier(large_array)
  [
  const int(1000)
  ]
  [
  const int(2000)
  ]
  ;
  int
  identifier(main)
  (
  void
  )
  {
  return
  sizeof
  identifier(large_array)
  ==
  const int(16000000)
  ;
  }
