test/tests/stages/17_supporting_dynamic_memory_allocation/invalid_types/scalar_expressions/cast_void.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[21]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(y)
  =
  (
  int
  )
  (
  void
  )
  const int(3)
  ;
  return
  identifier(y)
  ;
  }
